@@ -1,2 +1,3 @@
 dependencies:
   - role: xorg
+  - role: xscreensaver
